--- a/src/assets/scss/base/_utilities.scss
+++ b/src/assets/scss/base/_utilities.scss
@@ -7,12 +7,21 @@
   background-image: linear-gradient($color-primary-light, $color-primary-dark);
   color: $silver-200;
   border: none;
+  border-radius: 40px;
+  box-shadow:
+    20px 20px 60px #bebebe,
+    -20px -20px 60px #ffffff;
   .card-title {
     color: $color-white;
   }
   p,
   li {
     color: $silver-200;
+  }
+  img {
+    aspect-ratio: 3/2;
+    object-fit: contain;
+    mix-blend-mode: overlay;
   }
 }
 
