--- a/src/assets/scss/layout/index.scss
+++ b/src/assets/scss/layout/index.scss
@@ -54,3 +54,10 @@
   align-items: center;
   text-align: center;
 }
+
+.loginWallpaper {
+  background-image: url('/images/purple-wallpaper.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
