--- a/src/assets/scss/login/index.scss
+++ b/src/assets/scss/login/index.scss
@@ -3,17 +3,26 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
+
+.loginCard {
   animation-name: loginPage;
-  animation-duration: 2s;
+  animation-duration: 3s;
   animation-fill-mode: forwards;
 }
 
 @keyframes loginPage {
   from {
     opacity: 0;
+    background: none;
+    backdrop-filter: blur(0px);
+    border: 1px solid white;
   }
 
   to {
     opacity: 1;
+    background: transparent;
+    backdrop-filter: blur(8px);
+    border: 1px solid white;
   }
 }
