--- a/src/assets/scss/layout/index.scss
+++ b/src/assets/scss/layout/index.scss
@@ -56,7 +56,7 @@
 }
 
 .loginWallpaper {
-  background-image: url('/images/purple-wallpaper.png');
+  background-image: url('/images/peace-wallpaper.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
