--- a/src/assets/scss/login/index.scss
+++ b/src/assets/scss/login/index.scss
@@ -16,13 +16,13 @@
     opacity: 0;
     background: none;
     backdrop-filter: blur(0px);
-    border: 1px solid white;
+    border: 1px solid rgb(50, 48, 48);
   }
 
   to {
     opacity: 1;
     background: transparent;
     backdrop-filter: blur(8px);
-    border: 1px solid white;
+    border: 1px solid rgb(50, 48, 48);
   }
 }
