--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -24,8 +24,8 @@ $silver-600: #888888;
 $silver-800: #676767;
 $silver-950: #363636;
 
-$color-titles-and-texts: #6a6e83;
-$background: #f8f9fd;
+$color-titles-and-texts: #4d5060;
+$background: #f5f5f8;
 
 // FONT
 $default-title-size: 14px;
